--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,16 @@
-<!DOCTYPE html>
-<html ng-app="PrjMgmtModule">
+﻿<!DOCTYPE html>
+<html id="ng-app" data-the-app="ProjectManagementModule">
 
 <head>
     <meta charset="utf-8">
-    <title>AngularJS Template</title>
-    <link rel="stylesheet" type="text/css" href="../app/commons/scss/main.css">
+    <title>Project Management</title>
+    <link rel="stylesheet" type="text/css" href="/commons/scss/main.css">
 </head>
 
 <body>
-    <div ui-view></div>
-    <script type="text/javascript" src="../app/libraries/load.js"></script>
-    <script type="text/javascript" src="../app/commons/js/app.js"></script>
+    <div ui-view=""></div>
+
+    <script src="/commons/js/require.js" data-main="/commons/js/main"></script>
 </body>
 
 </html>
