Added checkboxes to project list

--- a/src/modules/dashboard/dashboard.html
+++ b/src/modules/dashboard/dashboard.html
@@ -7,7 +7,7 @@
     <div class="columns small-12">
 
         <h3>All project listing</h3>
-        <p><a href="#" ui-sref="{{vm.STATES.PROJECTLIST}}">Project list</a></p>
+        <p><a href="#" ui-sref="{{vm.STATES.PROJECT_LIST}}">Project list</a></p>
 
         <h3>Add new project</h3>
         <p><a href="#">Add new project</a></p>
