Completed read-only mode for project-edit

--- a/src/modules/project-edit/project-edit.html
+++ b/src/modules/project-edit/project-edit.html
@@ -12,12 +12,12 @@
 
                 <label>
                     Project name
-                    <input type="text" placeholder="Enter project name here">
+                    <input type="text" placeholder="Enter project name here" ng-model="vm.newProjectName">
                 </label>
 
                 <label>
                     Project Description
-                    <textarea placeholder="Enter project description here" rows="4"></textarea>
+                    <textarea placeholder="Enter project description here" rows="4" ng-model="vm.newDescription"></textarea>
                 </label>
 
             </fieldset>
@@ -25,7 +25,7 @@
             <fieldset>
                 <legend>Select project members</legend>
 
-                <input id="checkbox{{$index}}" type="checkbox" ng-repeat-start="member in vm.members">
+                <input id="checkbox{{$index}}" type="checkbox" ng-model="member.isMember" ng-repeat-start="member in vm.members">
                 <label for="checkbox1" ng-repeat-end="">{{member.display}}</label>
 
             </fieldset>
