Changed some flags

--- a/src/modules/project-edit/project-edit.html
+++ b/src/modules/project-edit/project-edit.html
@@ -30,7 +30,7 @@
 
             </fieldset>
 
-            <button type="submit">Save</button>
+            <button type="submit" ng-click="vm.saveProject()">Save</button>
 
         </form>
     </div>
