--- a/src/modules/project-list/project-list.html
+++ b/src/modules/project-list/project-list.html
@@ -38,6 +38,7 @@
 
     <div class="columns small-12">
         <button type="button" class="button" ng-click="vm.deleteProject()" ng-disabled="vm.isAnyProjectSelected()">Delete Projects</button>
+        <button type="button" class="button" ng-click="vm.addProject()">Add new</button>
     </div>
 
 </div>
