Added update functionality for edit-members

--- a/src/modules/project-edit/project-edit.html
+++ b/src/modules/project-edit/project-edit.html
@@ -31,7 +31,7 @@
             </fieldset>
 
             <button type="submit" ng-click="vm.saveProject()">Save</button>
-
+            <a href="#" ui-sref="{{vm.STATES.PROJECT_LIST}}">Cancel</a>
         </form>
     </div>
 
