--- a/src/modules/project-list/project-list.html
+++ b/src/modules/project-list/project-list.html
@@ -14,7 +14,7 @@
                     </th>
                     <th>Project Name</th>
                     <th>Description</th>
-                    <th>Members</th>
+                    <th>Star Rating</th>
                     <th>Actions</th>
                 </tr>
             </thead>
@@ -25,7 +25,7 @@
                     </td>
                     <td>{{project.name}}</td>
                     <td>{{project.description}}</td>
-                    <td>{{project.memberCount}}</td>
+                    <td>{{project.starRating}}</td>
                     <td>
                         <a href="#" ng-click="$event.preventDefault(); vm.editProject(project)">Edit</a>
                         <span>|</span>
